# wandb-tui

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  wandb_tui_compare.py
.github/workflows/: release.yml
wandb_tui/: __init__.py
