[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[project]
name = "wandb-tui"
version = "0.1.0"
description = "Terminal dashboard for comparing Weights & Biases runs from project or run URLs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Sam Foreman" },
]
keywords = ["wandb", "weights-and-biases", "tui", "mlops", "plotext"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console :: Curses",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "requests>=2.31",
  "plotext>=5.3",
]

[project.urls]
Homepage = "https://github.com/saforem2/wandb-tui"
Repository = "https://github.com/saforem2/wandb-tui"
Issues = "https://github.com/saforem2/wandb-tui/issues"

[project.scripts]
wandb-tui = "wandb_tui:main"

[tool.uv.build-backend]
module-root = ""
